# raginabox

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: config.py  server.py
app/core/: chunker.py  embeddings.py  generator.py  pdf_extractor.py  vectorstore.py
app/models/: schemas.py
app/routes/: api.py
app/samples/: content.py
app/static/: app.js  style.css
app/templates/: index.html
